# Homework-12.2

./: pyproject.toml
tests/: test_arrs.py
